<resources>
  <string name="app_name">K Scan AI</string>
</resources>