...
          title="✧ GET STARTED"
          onPress={onGetStarted}
          style={styles.wideButton}
        />

        <SecondaryButton
          testID="onboarding-already-have-account-button-v1"
          title="I ALREADY HAVE AN ACCOUNT"
          onPress={onAlreadyHaveAccount}
          style={styles.wideButton}
        />
      </View>
    </View>
...
